--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="top-container">
 
         <h1> Hi I'm Geoff</h1>
-        <p> Im a  programmer</p>
+        <h2> a  programmer</h2> 
             
     </div>
 
@@ -34,12 +34,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="" alt="">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <img class="devimg1" src="C:\Users\geoff\OneDrive\Desktop\HTML\CSS_Mysite\coding.png"  alt="">
+            <h3>Web Development</h3>
+            <p>I have been exploring web development for a while.I have keen interest in building my own web apps.</p>
           </div>
           <div class="skill-row">
-            <img class="" src="" alt="">
+            <img class="devimg2" src="C:\Users\geoff\OneDrive\Desktop\HTML\CSS_Mysite\software-development.png" alt="">
             <h3>Lorem Ipsum Dolor</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
