--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <hr>
         <div class="skills">
-          <h2>My Skills.</h2>
+          <h2>My Skills</h2>
           <div class="skill-row">
             <img class="devimg1" src="C:\Users\geoff\OneDrive\Desktop\HTML\CSS_Mysite\coding.png"  alt="">
             <h3>Web Development</h3>
@@ -41,14 +41,14 @@
           <div class="skill-row">
             <img class="devimg2" src="C:\Users\geoff\OneDrive\Desktop\HTML\CSS_Mysite\software-development.png" alt="">
             <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <p class="cont2">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <p id="lp1">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
           <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© Name Surname.</p>
+        <p id="lp">© Geoff George.</p>
       </div>
       
 
