--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="skills">
           <h2>My Skills</h2>
           <div class="skill-row">
-            <img class="devimg1" src="C:\Users\geoff\OneDrive\Desktop\HTML\CSS_Mysite\coding.png"  alt="">
+            <img class="devimg1" src="web-programming (1).png"  alt="">
             <h3>Web Development</h3>
             <p>I have been exploring web development for a while.I have keen interest in building my own web apps.</p>
           </div>
           <div class="skill-row">
-            <img class="devimg2" src="C:\Users\geoff\OneDrive\Desktop\HTML\CSS_Mysite\software-development.png" alt="">
+            <img class="devimg2" src="software-development.png" alt="">
             <h3>Lorem Ipsum Dolor</h3>
             <p class="cont2">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
