--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="skill-row">
             <img class="devimg2" src="software-development.png" alt="">
             <h3>Problem Solving</h3>
-            <p class="cont2">I am slilled in DSA and have developed my problem solving abilities through Competitive programming</p>
+            <p class="cont2">I am skilled in DSA and have developed my problem solving abilities through Competitive programming</p>
           </div>
         </div>
         <hr>
